--- a/preferences-client/package.json
+++ b/preferences-client/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@feathersjs/client": "^3.4.4",
+    "@material-ui/core": "^4.11.2",
     "moment": "^2.17.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^17.0",
+    "react-dom": "^17.0",
     "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
